--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 	<header>
 	<h1>{{YOUR NAME}}</h1>
+	<h2>Drex</h2>
 		<p class="tagline">{{YOUR JOB TITLE or YOUR TAGLINE}}</p>
 		<a href="#major-navigation" class="navigation-toggle-button">Skip to Major Navigation</a>
 
